Изменить логику получения баланса: Получать баланс по user_id, а не по username
